--- a/styles/neo-impressionismIndex.css
+++ b/styles/neo-impressionismIndex.css
@@ -48,6 +48,7 @@
 
 .mySlides img {
   height: 500px;
+  max-width: 700px;
   transition: 1s;
 }
 
@@ -64,7 +65,9 @@
 }
 
 .mySlides:hover .caption {
-  display: block;
+  display: flex;
+  width: 60%;
+  margin: auto;
 }
 
 .vert-center {
